<?xml version="1.0"?>
<package format="3">
  <name>robot_bringup</name>
  <version>0.1.0</version>
  <description>Joystick-only bringup for 4WD diff-drive with serial bridge to ESP32</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>python3-serial</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

