<?xml version="1.0"?>
<package format="3">
  <name>robot_bringup</name>
  <version>0.1.0</version>
  <description>Robot bringup</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>Ha HA Ha</license>

  <!-- ament_python เท่านั้นพอ -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ROS launch & tools -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <!-- ROS deps ที่ใช้งานจริงใน base_node.py -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <!-- อื่น ๆ ที่คุณใช้ในระบบ -->
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>micro_ros_agent</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>